Fixing Bady Height to remove the container scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,7 +156,7 @@ body {
   background: var(--background);
   /* width: min(1200px, 100% - 4rem); */
   max-width: 1200px;
-  height: 100svh;
+  min-height: 100svh;
   margin-inline: auto;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
